# claude-to-overleaf

./: .env.example  .gitignore  LICENSE  README.md  mkdocs.yml  overleaf_sync.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  index.md  reference.md  using-with-claude-code.md
src/claude_to_overleaf/: SKILL.md  __init__.py  cli.py
tests/: test_smoke.py
